--- a/index.html
+++ b/index.html
@@ -15,16 +15,64 @@
 </head>
 
 <body>
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-                <span aria-hidden="true">Nos services et Nos produits</span>
-                <span aria-hidden="true">Hivernage</span>
-                <span aria-hidden="true">Vente directe</span>
-              </a>
-    <header class="accueil">
-        <h1>GAEC Le Marais de l'Ile</h1>
-        <p>Marie-Line et Frédéric martineau vous accueillent dans leur humble demeure.</p>
-    </header>
 
+    <header class="accueil">
+        <h1 class="title is-1">GAEC Le Marais de l'Ile</h1>
+        <p class="succes is-2">Marie-Line et Frédéric martineau vous accueillent dans leur humble demeure.</p>
+    </header>
+    <div class="block nos-services">
+        <div class="container">
+                <h3 class="title is-1">Nos services et Nos produits</h3>
+                <p>Nous proposons</p>
+        <div class="columns">
+            <div class="column is-one-quater">
+                <div class="en-tete">
+                    <p>Bottes de paille (15-17Kg)<br>
+                    2€20 l'Unité</p>
+                </div>
+                <div class="description">
+                     <p>- Poulailler <br>
+                        - Jardin Permaculture<br>
+                        - Paillage<br>
+                        - Isolation</p>
+                </div>
+            </div>
+            <div class="column is-one-quater">
+                <div class="en-tete">
+                    <p>Bottes de foin (20-25Kg)<br>
+                    4€40 l'Unité</p>
+                </div>
+                <div class="description">
+                    <p>Foin de prairie naturelle sans engrais ni produits Phyto-sanitaires </p>
+                </div>
+            </div>
+            <div class="column is-one-quarter"></div>
+            <div class="column is-one-quarter"></div>
+        </div>
+        <div class="columns">
+          <div class="column is-one-quarter">
+            First column
+          </div>
+          <div class="column is-one-quarter">
+            Second column
+          </div>
+          <div class="column is-one-quarter">
+            Third column
+          </div>
+          <div class="column is-one-quarter">
+            Fourth column
+          </div>
+        </div>
+    </div>
+    </div>
+    <section class="block hivernage"></section>
+    <section class="block vente-directe"></section>
+    <section class="block contact"></section>
+    <footer>
+        <p>
+         Merci de votre visite et à très bientôt je l'espère<br>
+       Ce site a été réaliser par <a href="http://www.reynaud-sebastien.fr">Sébastien</a> vous pouvez retrouver son site en cliquant </p>
+    </footer>
 </body>
 
 </html>
